[gd_scene load_steps=6 format=3 uid="uid://02yhbniiagkv"]

[ext_resource type="Script" uid="uid://clkaldfw0ybyk" path="res://scenes/space.gd" id="1_dtwn4"]
[ext_resource type="PackedScene" uid="uid://bla85reuu38vt" path="res://scenes/ui/footer.tscn" id="1_rysn1"]
[ext_resource type="PackedScene" uid="uid://dkn32lpac8twr" path="res://scenes/entities/actors/ship.tscn" id="2_c6rj5"]
[ext_resource type="Script" uid="uid://hcr5wm55eq0e" path="res://scripts/enemies/wave_manager.gd" id="4_x2olr"]
[ext_resource type="Theme" uid="uid://n7574lwa87ta" path="res://assets/themes/m3x6.tres" id="5_1gvwg"]

[node name="space" type="Node2D"]
script = ExtResource("1_dtwn4")

[node name="space_bg" type="ColorRect" parent="."]
custom_minimum_size = Vector2(160, 144)
offset_right = 160.0
offset_bottom = 144.0
color = Color(0, 0, 0, 1)

[node name="ship" parent="." instance=ExtResource("2_c6rj5")]
position = Vector2(10, 26)

[node name="notification" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 48.0
offset_top = 120.0
offset_right = 112.0
offset_bottom = 132.0

[node name="bg" type="ColorRect" parent="notification"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.32941177, 0.32941177, 0.32941177, 1)

[node name="text" type="Label" parent="notification"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_1gvwg")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "UNLUCKY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="footer" parent="." instance=ExtResource("1_rysn1")]
offset_top = 131.0
offset_bottom = 143.0

[node name="shots" type="Node2D" parent="."]

[node name="wave_manager" type="Node" parent="."]
script = ExtResource("4_x2olr")

[node name="unlucky_timer" type="Timer" parent="."]

[connection signal="hp_changed" from="ship" to="footer" method="_on_ship_hp_changed"]
